# scalp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: paper_profile.env  strategy_profile.env
deploy/systemd/: moex-scalper-analyze.service  moex-scalper-analyze.timer  moex-scalper-dashboard.service  moex-scalper-govern.service  moex-scalper-govern.timer  moex-scalper-intraday.service  moex-scalper-intraday.timer  moex-scalper-optimize.service  moex-scalper-optimize.timer  moex-scalper-preopen.service  moex-scalper-preopen.timer  moex-scalper-research.service  moex-scalper-research.timer  moex-scalper-restrict.service  moex-scalper-restrict.timer  moex-scalper-summary.service  moex-scalper-summary.timer  moex-scalper-tune.service  moex-scalper-tune.timer  moex-scalper-update.service  moex-scalper-update.timer  moex-scalper-watchdog.service  moex-scalper-watchdog.timer  moex-scalper.service
scripts/: bootstrap_ubuntu.sh  common_service_env.sh  install_server_services.sh  run_analysis_service.sh  run_dashboard_service.sh  run_governor_service.sh  run_intraday_research_service.sh  run_optimizer_service.sh  run_preopen_service.sh  run_research_service.sh  run_restrictions_service.sh  run_scalper_service.sh  run_summary_service.sh  run_tuning_service.sh  run_watchdog_service.sh  update_from_github.sh
tests/: test_analysis_forensics.py  test_collection_guard.py  test_intraday.py  test_risk_manager.py  test_runtime_io_resilience.py  test_strategy_adaptive.py  test_strategy_overlay.py  test_tbank_stream_fallback.py  test_tuning.py
(+30 files in other folders)
